InternexDev_Sandbox/src/objects/CRM_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Crypto_Key__c</fullName>
        <label>Crypto Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_1__c</fullName>
        <label>URL 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_2__c</fullName>
        <label>URL 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CRM Credentials</label>
</CustomObject>